--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -163,6 +163,17 @@
     <ClInclude Include="geometry\rect.h" />
     <ClInclude Include="geometry\size.h" />
     <ClInclude Include="geometry\vector.h" />
+    <ClInclude Include="system\d2d_api.h" />
+    <ClInclude Include="system\d2d_bitmap.h" />
+    <ClInclude Include="system\d3d_api.h" />
+    <ClInclude Include="system\dcomp_api.h" />
+    <ClInclude Include="system\directx_helper.h" />
+    <ClInclude Include="system\directx_hwnd.h" />
+    <ClInclude Include="system\directx_resource.cpp" />
+    <ClInclude Include="system\directx_resource.h" />
+    <ClInclude Include="system\dwrite_api.h" />
+    <ClInclude Include="system\dxgi_api.h" />
+    <ClInclude Include="system\wic_api.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
