--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="geometry\geometry.h" />
     <ClInclude Include="geometry\point.h" />
     <ClInclude Include="geometry\rect.h" />
+    <ClInclude Include="geometry\region.h" />
     <ClInclude Include="geometry\size.h" />
     <ClInclude Include="geometry\vector.h" />
     <ClInclude Include="system\d2d_api.h" />
@@ -180,8 +181,9 @@
     <ClInclude Include="system\wic_api.h" />
     <ClInclude Include="window\Desktop.h" />
     <ClInclude Include="window\FlowLayout.h" />
+    <ClInclude Include="window\redraw_queue.h" />
+    <ClInclude Include="window\reflow_queue.h" />
     <ClInclude Include="window\ListLayout.h" />
-    <ClInclude Include="window\scheduler.h" />
     <ClInclude Include="window\TextBox.h" />
     <ClInclude Include="window\WndFrame.h" />
     <ClInclude Include="window\WndObject.h" />
@@ -189,10 +191,12 @@
   <ItemGroup>
     <ClCompile Include="figure\image.cpp" />
     <ClCompile Include="figure\shape.cpp" />
+    <ClCompile Include="geometry\region.cpp" />
     <ClCompile Include="system\d2d_hwnd.cpp" />
     <ClCompile Include="system\d2d_target.cpp" />
     <ClCompile Include="window\Desktop.cpp" />
-    <ClCompile Include="window\scheduler.cpp" />
+    <ClCompile Include="window\redraw_queue.cpp" />
+    <ClCompile Include="window\reflow_queue.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
