--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -102,12 +102,6 @@
     <ClInclude Include="figure\image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="window\reflow_queue.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="window\redraw_queue.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="geometry\region.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -129,6 +123,9 @@
     <ClInclude Include="control\ImageBox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="control\CheckBox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="system\d2d_hwnd.cpp">
@@ -147,12 +144,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="geometry\region.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="window\redraw_queue.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="window\reflow_queue.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
