--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="control\ImageBox.h" />
     <ClInclude Include="figure\color.h" />
     <ClInclude Include="figure\figure.h" />
+    <ClInclude Include="figure\figure_queue.h" />
     <ClInclude Include="figure\image.h" />
     <ClInclude Include="figure\shape.h" />
     <ClInclude Include="frame\DesktopWndFrame.h" />
@@ -174,6 +175,7 @@
     <ClInclude Include="geometry\region.h" />
     <ClInclude Include="geometry\size.h" />
     <ClInclude Include="geometry\vector.h" />
+    <ClInclude Include="style\value_tag.h" />
     <ClInclude Include="system\d2d_api.h" />
     <ClInclude Include="system\d2d_target.h" />
     <ClInclude Include="system\d3d_api.h" />
