--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -138,6 +138,12 @@
     <ClInclude Include="control\Placeholder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="layout\BarLayout.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="frame\MultiViewFrame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="system\d2d_hwnd.cpp">
