--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -179,6 +179,7 @@
     <ClInclude Include="geometry\size.h" />
     <ClInclude Include="geometry\vector.h" />
     <ClInclude Include="layout\BarLayout.h" />
+    <ClInclude Include="layout\SplitLayout.h" />
     <ClInclude Include="style\frame_style.h" />
     <ClInclude Include="system\d2d_api.h" />
     <ClInclude Include="system\d2d_target.h" />
@@ -198,6 +199,7 @@
     <ClInclude Include="control\TextBox.h" />
     <ClInclude Include="frame\WndFrame.h" />
     <ClInclude Include="window\WndObject.h" />
+    <ClInclude Include="window\wnd_traits.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="figure\image.cpp" />
