--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClInclude Include="window\wnd_traits.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="frame\ScrollFrame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="system\d2d_hwnd.cpp">
