--- a/WndDesign/WndDesign.vcxproj
+++ b/WndDesign/WndDesign.vcxproj
@@ -162,16 +162,19 @@
     <ClInclude Include="control\CheckBox.h" />
     <ClInclude Include="control\EditBox.h" />
     <ClInclude Include="control\ImageBox.h" />
-    <ClInclude Include="frame\ScrollFrame.h" />
-    <ClInclude Include="window\Placeholder.h" />
+    <ClInclude Include="control\Placeholder.h" />
+    <ClInclude Include="control\TextBox.h" />
     <ClInclude Include="figure\color.h" />
     <ClInclude Include="figure\figure.h" />
     <ClInclude Include="figure\figure_queue.h" />
     <ClInclude Include="figure\image.h" />
     <ClInclude Include="figure\shape.h" />
     <ClInclude Include="frame\DesktopWndFrame.h" />
+    <ClInclude Include="frame\LayerFrame.h" />
     <ClInclude Include="frame\MultiViewFrame.h" />
     <ClInclude Include="frame\OverlapWndFrame.h" />
+    <ClInclude Include="frame\ScrollFrame.h" />
+    <ClInclude Include="frame\WndFrame.h" />
     <ClInclude Include="geometry\geometry.h" />
     <ClInclude Include="geometry\margin.h" />
     <ClInclude Include="geometry\point.h" />
@@ -180,27 +183,29 @@
     <ClInclude Include="geometry\size.h" />
     <ClInclude Include="geometry\vector.h" />
     <ClInclude Include="layout\BarLayout.h" />
+    <ClInclude Include="layout\FlowLayout.h" />
+    <ClInclude Include="layout\ListLayout.h" />
+    <ClInclude Include="layout\OverlapLayout.h" />
     <ClInclude Include="layout\SplitLayout.h" />
+    <ClInclude Include="message\ime_msg.h" />
+    <ClInclude Include="message\key_msg.h" />
+    <ClInclude Include="message\message.h" />
+    <ClInclude Include="message\mouse_msg.h" />
+    <ClInclude Include="message\notify_msg.h" />
     <ClInclude Include="style\frame_style.h" />
     <ClInclude Include="system\d2d_api.h" />
+    <ClInclude Include="system\d2d_hwnd.h" />
     <ClInclude Include="system\d2d_target.h" />
     <ClInclude Include="system\d3d_api.h" />
     <ClInclude Include="system\dcomp_api.h" />
     <ClInclude Include="system\directx_helper.h" />
-    <ClInclude Include="system\d2d_hwnd.h" />
-    <ClInclude Include="system\directx_resource.cpp" />
     <ClInclude Include="system\directx_resource.h" />
     <ClInclude Include="system\dwrite_api.h" />
     <ClInclude Include="system\dxgi_api.h" />
     <ClInclude Include="system\wic_api.h" />
     <ClInclude Include="window\Desktop.h" />
-    <ClInclude Include="layout\FlowLayout.h" />
-    <ClInclude Include="layout\OverlapLayout.h" />
-    <ClInclude Include="layout\ListLayout.h" />
-    <ClInclude Include="control\TextBox.h" />
-    <ClInclude Include="frame\WndFrame.h" />
-    <ClInclude Include="window\WndObject.h" />
     <ClInclude Include="window\wnd_traits.h" />
+    <ClInclude Include="window\WndObject.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="figure\image.cpp" />
@@ -208,6 +213,7 @@
     <ClCompile Include="geometry\region.cpp" />
     <ClCompile Include="system\d2d_hwnd.cpp" />
     <ClCompile Include="system\d2d_target.cpp" />
+    <ClCompile Include="system\directx_resource.cpp" />
     <ClCompile Include="window\Desktop.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
