--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -171,6 +171,9 @@
     <ClInclude Include="figure\tiled_layer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="frame\TiledLayerFrame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="system\d2d_hwnd.cpp">
