--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -51,7 +51,7 @@
     <ClInclude Include="system\directx_helper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="system\d2d_hwnd.h">
+    <ClInclude Include="figure\desktop_wnd_layer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="system\d3d_api.h">
@@ -176,7 +176,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="system\d2d_hwnd.cpp">
+    <ClCompile Include="figure\desktop_wnd_layer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="window\Desktop.cpp">
@@ -195,6 +195,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="figure\layer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="frame\LayerFrame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
