--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -174,6 +174,12 @@
     <ClInclude Include="frame\TiledLayerFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="system\win32_api.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="style\desktop_wnd_style.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="figure\desktop_wnd_layer.cpp">
@@ -198,6 +204,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="frame\LayerFrame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="frame\DesktopWndFrame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="system\win32_api.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
