--- a/WndDesign/WndDesign.vcxproj.filters
+++ b/WndDesign/WndDesign.vcxproj.filters
@@ -162,9 +162,6 @@
     <ClInclude Include="message\notify_msg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="message\ime_msg.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="figure\layer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -202,6 +199,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="geometry\geometry_helper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="message\ime.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="system\win32_ime.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -243,6 +246,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="figure\bitmap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="message\ime.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="system\win32_ime.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
